feat: CustomBlockReplace